# full-apply

./: .gitlab-ci.yml  LICENSE  README.md  full-apply.py  pyproject.toml
full_apply/: __main__.py  change.py  collect.py  term.py
tests/: test_full_apply.py
