[tool.poetry]
name = "full-apply"
version = "0.1.0"
description = "Apply commands to both file contents and paths"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
packages = [
  { include = "full_apply" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yachalk = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
